# paper-figure-codegen

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  generate_examples.py  pyproject.toml
docs/: prd.md
examples/: boxplot_example.py  confusion_matrix_example.py  eeg_topomap_example.py  flowchart_composite_example.py  grouped_bar_example.py  heatmap_example.py  histogram_kde_example.py  horizontal_bar_example.py  multi_panel_example.py  permutation_test_example.py  radar_example.py  raincloud_example.py  scatter_regression_example.py  stacked_bar_example.py  ternary_example.py  time_series_example.py  violin_box_example.py
paper_figure_codegen/: __init__.py  cli.py  export.py
paper_figure_codegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper_figure_codegen/core/: __init__.py  color_system.py  data_parser.py  data_spec.py  style.py
paper_figure_codegen/recipes/: __init__.py  base.py  boxplot.py  confusion_matrix.py  eeg_topomap.py  flowchart_composite.py  grouped_bar.py  heatmap.py  histogram_kde.py  horizontal_bar.py  line_with_ci.py  multi_panel.py  permutation_test.py  radar.py  raincloud.py  scatter_regression.py  ternary.py  (+2 more)
references/: codegen-rules.md  color-system.md  data-structures.md  export-policy.md  plot-recipes.md  plot-selection.md  style-guide.md  troubleshooting.md
templates/: base_matplotlib.py  multi_panel.py  statistical_distribution.py
tests/: test_cli.py  test_color_system.py  test_data_parser.py  test_data_spec.py  test_export.py  test_recipe_registry.py  test_recipes.py  test_style.py
(+7 files in other folders)
