[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-figure-codegen"
version = "0.1.0"
description = "Generate publication-quality Python matplotlib code for scientific figures"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "jinja2>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
stats = [
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "statsmodels>=0.13",
]
eeg = [
    "mne>=1.0",
]

[project.scripts]
paper-figure = "paper_figure_codegen.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
